# IAGOS_Sentinel2_Landsat_Collocations

./: .gitignore  README.md  pyproject.toml
data/: README.md  landsat_sentinel_collocations_20260212.csv  landsat_sentinel_collocations_20260216.csv
data/contrail_evolution/annotations/: L1C_T25SDD_A032496_20210911T131028.json  L1C_T31UDQ_A020383_20210130T105205.json  L1C_T52SGA_A010625_20190320T014650.json
data/contrail_evolution/cocip/: L1C_T25SDD_A032496_20210911T131028_rh_variable.csv  L1C_T31UDQ_A020383_20210130T105205_rh_variable.csv  L1C_T52SGA_A010625_20190320T014650_rh_variable.csv
data/figure_2_adsb/: 48506d_L1C_T28UGC_A025403_20220116T120353.csv  figure_2_adsb_collocations.csv  landsat-figure2.csv
notebooks/paper_reproduction/: figure_4.ipynb  figure_5.ipynb  figure_6.ipynb  figure_7.ipynb  figure_8.ipynb  figure_9.ipynb  figure_A1_A2_A3.ipynb  figure_A4_A5.ipynb  figure_B1.ipynb  figure_C1.ipynb  figure_C2.ipynb  figure_D1_D2_D3_D4.ipynb
src/iagos_toolkit/flight/: aircraft_pars.csv  aircraft_performance.py  iagos_fleet.py
src/iagos_toolkit/weather/: constants.py  era5.py  iagos.py  isa.py  thermo.py
