[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iagos-toolkit"
version = "0.1.0"
description = "IAGOS satellite and aircraft collocation toolkit"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "xarray",
    "netcdf4",
    "pandas",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
